Fixed large whitespacing issue

--- a/css/index_main.css
+++ b/css/index_main.css
@@ -258,7 +258,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 120px;
 }
 
 .download-section {
@@ -280,7 +280,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 120px;
     }
 
     .download-section {
@@ -376,5 +376,6 @@ body {
 	margin: 10px 0px;
 }
 .table th{
+	/*th elements don't want to center by default :( */
 	text-align: center;
 }
